<resources>
    <string name="app_name">She Safe</string>
    <string name="high_risk_danger_mode">Full Protection Mode</string>
    <string name="moderate_risk_danger_mode">Anticipatory Mode</string>
    <string name="send">Send</string>
    <string name="action_language">Language</string>
    <string name="send_a_message">Send a message</string>

    <!--    strings for Activity Main    -->
    <string name="send_emergency_messages">Send Emergency Messages</string>
    <string name="call_emergency_number">Call 911</string>
    <string name="police_number">911</string>
    <string name="are_you_sure_you_want_to_turn_on_full_protection_mode">Are you sure you want to turn on Full Protection Mode?</string>
    <string name="you_sure_you_want_to_turn_off_full_protection_mode">Are you sure you want to turn off Full Protection Mode?</string>
    <string name="in_danger_sms_message">Please help me, I\'m in danger! My location is: </string>
    <string name="sms_sent_to">SMS successfully sent to </string>
    <string name="current_location">Current Location</string>
    <string name="we_are_here_to_help_you">We are here to help you</string>

    <!--    Full protection mode    -->
    <string name="by_turning_full_protection_mode">By turning Full Protection Mode on:</string>
    <string name="def1_full_protection_mode">Please turn on your location service and allow SheSafe to access your location</string>
    <string name="def2_full_protection_mode">SheSafe will automatically send a message to your emergency contacts when we detect a danger situation (scream, phone not moving, and too many phone shake)</string>
    <string name="def3_full_protection_mode">SheSafe will give you a notification containing shortcut to call the police or your emergency contacts</string>
    <string name="def4_full_protection_mode">Please make sure you have your phone with you at all times and bring your personal self-defense items</string>

    <!--    strings for contacts feature    -->
    <string name="contacts">Contacts</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add_your_trusted_people_number">Add your trusted people\'s number</string>
    <string name="they_will_be_notified">SheSafe will then send messages to them when you are detected to be in danger.</string>
    <string name="add_contact">Add New Contact</string>
    <string name="no_contact_selected">Please define your emergency contact first.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <!--    strings for about us feature    -->
    <string name="about_us">About She Safe</string>
    <string name="first_paragraph">Welcome to She Safe! She Safe is designed to empower women with an essential tool for their safety. Our app is built with a unique feature that can detect danger and send out SOS messages to your defined contacts with just a few effort to get help.</string>
    <string name="second_paragraph">Our mission is to create a safer world for women, by providing a reliable and easy-to-use tool that can quickly alert your loved ones in case of an emergency. We understand that women\'s safety is a crucial issue, and our app is designed to provide the necessary support and protection needed for women to feel safe and secure.</string>

    <string name="sensor_error">No sensor</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
