<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_turning_full_protection_mode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/num_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="1"
        app:layout_constraintTop_toBottomOf="@id/tv_headline"
        app:layout_constraintLeft_toLeftOf="@id/tv_headline" />

    <TextView
        android:id="@+id/tv_content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/def1_full_protection_mode"
        app:layout_constraintTop_toTopOf="@id/num_1"
        app:layout_constraintLeft_toRightOf="@id/num_1" />

    <TextView
        android:id="@+id/num_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="2"
        app:layout_constraintTop_toBottomOf="@id/tv_content_1"
        app:layout_constraintLeft_toLeftOf="@id/num_1" />

    <TextView
        android:id="@+id/tv_content_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/def2_full_protection_mode"
        app:layout_constraintTop_toTopOf="@id/num_2"
        app:layout_constraintLeft_toLeftOf="@id/tv_content_1" />

    <TextView
        android:id="@+id/num_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="3"
        app:layout_constraintTop_toBottomOf="@id/tv_content_2"
        app:layout_constraintLeft_toLeftOf="@id/num_1" />

    <TextView
        android:id="@+id/tv_content_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/def3_full_protection_mode"
        app:layout_constraintTop_toTopOf="@id/num_3"
        app:layout_constraintLeft_toLeftOf="@id/tv_content_1" />

    <TextView
        android:id="@+id/num_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="3"
        app:layout_constraintTop_toBottomOf="@id/tv_content_3"
        app:layout_constraintLeft_toLeftOf="@id/num_1" />

    <TextView
        android:id="@+id/tv_content_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/def4_full_protection_mode"
        app:layout_constraintTop_toTopOf="@id/num_4"
        app:layout_constraintLeft_toLeftOf="@id/tv_content_1" />

</androidx.constraintlayout.widget.ConstraintLayout>