<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.SheSafe.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#BAEEFF"
    android:theme="@style/Theme.SheSafe.AppWidgetContainer">

    <TextView
        android:id="@+id/tv_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/we_are_here_to_help_you"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/wBtn_send_a_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/send_a_message"
        android:onClick="CreateAMessage"
        app:layout_constraintTop_toBottomOf="@id/tv_const"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/wBtn_call_police"/>
    <Button
        android:id="@+id/wBtn_call_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/call_emergency_number"
        android:onClick="CallPolice"
        app:layout_constraintTop_toTopOf="@id/wBtn_send_a_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/wBtn_send_a_message"/>
</androidx.constraintlayout.widget.ConstraintLayout>